bpo-41659: Disallow curly brace directly after primary (GH-22996)